<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_horizontal_center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5"/>

        <TextView
            android:id="@+id/tv_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:lineSpacingExtra="-12sp"
            android:text="@string/dialog_network_error_subtitle"
            android:textColor="@color/dark_mint"
            android:textSize="32dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/gl_horizontal_center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/iv_network_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="18dp"
            app:layout_constraintBottom_toTopOf="@+id/tv_subtitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/img_please_120_px_green" />

        <View
            android:id="@+id/v_underbar"
            android:layout_width="175dp"
            android:layout_height="11dp"
            android:layout_marginBottom="16dp"
            android:background="@color/lemon"
            app:layout_constraintBottom_toTopOf="@+id/iv_network_error"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:text="@string/dialog_network_error_title"
            android:textSize="24dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/v_underbar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="31dp"
            android:lineSpacingExtra="8dp"
            android:text="@string/dialog_network_error_description"
            android:textColor="@color/greyish"
            android:textSize="16dp"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_subtitle" />

        <com.mashup.nawainvitation.custom.LemonButton
            android:id="@+id/lemon_button_back"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:enabled="true"
            android:text="@string/dialog_network_error_button"
            android:textSize="18dp"
            android:lineSpacingExtra="14dp"
            app:layout_constraintBottom_toBottomOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
