<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="model"
            type="com.mashup.nawainvitation.presentation.searchlocation.viewmodel.InputLocationViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white_two"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvInputAddressTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:text="@string/input_location_title"
            android:textColor="@color/blue_blue"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/tvQuestion" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cvInputAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="7dp"
            android:layout_marginEnd="16dp"
            android:onClick="@{()-> model.listener.goToSearch()}"
            app:cardCornerRadius="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvInputAddressTitle">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp">

                <ImageView
                    android:id="@+id/ivSearchIcon"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginEnd="10dp"
                    app:srcCompat="@drawable/ic_search_blue_24" />

                <TextView
                    android:id="@+id/tvInputAddress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/ivSearchIcon"
                    android:text='@{model.placeName != "" ? model.placeName : @string/input_location_search_text}'
                    android:textSize="16sp" />

                <View
                    android:id="@+id/viewLine"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_below="@id/ivSearchIcon"
                    android:layout_marginTop="11dp"
                    android:background="@color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/viewLine"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="8dp"
                    android:text="@string/input_location_example_text"
                    android:textColor="@color/black"
                    android:textSize="12sp" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tvQuestion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="57dp"
            android:text="@string/input_location_question"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvQuestion"
            app:srcCompat="@drawable/ic_place_blue_24" />

        <com.mashup.nawainvitation.custom.LemonButton
            android:id="@+id/btnInputAddressSubmit"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:enabled='@{model.placeName != "" ? true : false}'
            android:onClick="@{()->model.listener.submit()}"
            android:text="@string/input_location_btn_text"
            android:textSize="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>