<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="mainModel"
            type="com.mashup.nawainvitation.presentation.main.MainViewModel" />

        <variable
            name="infoModel"
            type="com.mashup.nawainvitation.presentation.invitationinfo.InvitationInfoViewModel" />
    </data>

    <LinearLayout
        android:background="@color/white_two"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:orientation="vertical"
                android:paddingBottom="30dp">

                <TextView
                    android:text="@string/invitation_title"
                    android:textColor="@color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="23dp"
                    android:textSize="24dp" />

                <RelativeLayout
                    android:layout_height="40dp"
                    android:layout_width="match_parent"
                    android:layout_marginStart="19dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="45dp"
                    android:orientation="horizontal">

                    <View
                        android:layout_centerVertical="true"
                        android:layout_width="1dp"
                        android:layout_height="20dp"
                        android:layout_marginStart="8dp"
                        android:background="@color/black" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="17dp"
                        android:background="@null"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textSize="16dp"
                        android:hint="@string/input_invitation_title"
                        android:text="@={infoModel.title}" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:layout_alignParentBottom="true"
                        android:background="@color/dark_mint" />
                </RelativeLayout>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="336dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:orientation="vertical"
                    app:cardCornerRadius="16dp">

                    <EditText
                        android:id="@+id/etInvitationContents"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="40dp"
                        android:background="@null"
                        android:hint="@string/please_input_invitation_title"
                        android:lineSpacingExtra="8dp"
                        android:textColor="@color/black"
                        android:gravity="top"
                        android:textSize="16dp"
                        android:maxLength="@{infoModel.limitCount}"
                        android:padding="16dp"
                        android:text="@={infoModel.contents}" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end|bottom"
                        android:layout_marginEnd="16dp"
                        android:layout_marginBottom="8dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@{@string/format_invitation_description_count(infoModel.contentsCount)}"
                            tools:text="0자" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="4dp"
                            android:text="@{@string/limit_count_format(infoModel.limitCount)}"
                            tools:text="/ 100자" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>
        </ScrollView>

        <com.mashup.nawainvitation.custom.LemonButton
            android:id="@+id/btnInvitationInfoSave"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:enabled="@{infoModel.enableBtn}"
            android:onClick="@{() -> infoModel.saveData()}"
            android:text="@string/input_complete"
            android:textSize="24dp" />
    </LinearLayout>

</layout>