<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/frameLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:background="@color/white_two"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@color/white_two">

            <View
                android:layout_width="174dp"
                android:layout_height="11dp"
                android:layout_gravity="bottom"
                android:background="@color/lemon" />

            <TextView
                android:id="@+id/tv_item_type_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@color/white_two"
                android:text="@string/tutorial_title"
                android:textColor="@color/black"
                android:textSize="24dp"
                android:textStyle="bold" />

        </FrameLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="6dp"
            android:background="@drawable/ic_img_character_360_x_96_green" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:background="@color/white_two"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="8dp"
                android:layout_height="8dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/item_selected_dot" />

            <ImageView
                android:layout_width="8dp"
                android:layout_height="8dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/item_unselected_dot" />

            <ImageView
                android:layout_width="8dp"
                android:layout_height="8dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/item_unselected_dot" />

            <ImageView
                android:layout_width="8dp"
                android:layout_height="8dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/item_unselected_dot" />

            <ImageView
                android:layout_width="8dp"
                android:layout_height="8dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/item_unselected_dot" />

            <ImageView
                android:layout_width="8dp"
                android:layout_height="8dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/item_unselected_dot" />
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/ic_img_slide_tutorial"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.566"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@null"
        android:gravity="center"
        android:text="@string/tutorial_notice"
        android:textColor="@color/white_two"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="@+id/imageView2" />

    <TextView
        android:id="@+id/btnOKTutorial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="80dp"
        android:background="@null"
        android:gravity="center"
        android:text="@string/tutorial_button_ok"
        android:textColor="@color/white_two"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
